# rust-template

./: README.md
back-end/: Cargo.toml
back-end/src/: main.rs
front-end/: Cargo.toml  README.md
front-end/src/: main.rs
front-end/src/components/: app.rs  fetch.rs  mod.rs
