[package]
name = "front-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.6", features = ["csr"] }
gloo-timers = {version = "0.3.0", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = {version = "0.3.68", features = ["console"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.3"